<resources>
    <string name="app_name">Hafalanku</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="app_description">Aplikasi Monitoring\nHafalan AlQuran\nSD Plus Al-Muhajirin\nKampus 1 Purwakarta</string>
    <string name="login_guru_wali_kelas">Guru/Wali Kelas</string>
    <string name="login_orangtua_siswa">Orangtua Siswa</string>
    <string name="pilih_login">Pilih Login</string>
    <string name="menu_about"><u>About</u></string>

    <string name="about_text">
        <li> • This application was created to \n monitor the memorization \n progress of students of SD Plus \nAl-Muhajirin Campus 1</li>
        \n <li> • Illustrative images created with translated text using AI</li>
    </string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="text_hadits_belajar">“Sebaik-baik kalian adalah orang yang mempelajari Al-Quran dan mengajarkannya.” \n HR. Bukhari</string>
    <string name="login">LOGIN</string>
    <string name="text_hadits_menghafal">“Barangsiapa membaca Alquran dan menghafalkannya, maka Allah akan memasukkannya ke dalam surga serta akan memberi syafaat kepada sepuluh dari keluarganya yang seharusnya masuk neraka.”\n H.R. Ibnu Majah</string>
    <string name="setoran_siswa">Setoran Siswa</string>
    <string name="mutabaah">Mutabaah</string>
    <string name="penilaian_siswa">Penilaian Siswa</string>
    <string name="konsultasi">Konsultasi</string>
    <string name="laporan_hafalan">Laporan Hafalan</string>
    <string name="konsultasi_text">Diskusi dengan pengajar dapat dilakukan melalui WhatsApp.</string>
    <string name="unggah_video">Unggah Video</string>
    <string name="unggah_video_text">Siswa/siswi yang belum lulus dapat mengunggah video hafalan.</string>
    <string name="pilih_nama_siswa">Pilih Nama Siswa</string>
    <string name="pilih_surat">Pilih Surat</string>
    <string name="pilih_surat_tidak_lulus">Pilih surat yang belum lulus</string>
    <string name="pilih_juz">Pilih Juz</string>
    <string name="selesai">SELESAI</string>
    <string name="kosong"></string>
    <string name="alt_judul_video">ALT = Judul Video</string>
    <string name="catatan_hafalan_juz_29">Catatan Hafalan Juz 29</string>
    <string name="no">No.</string>
    <string name="nomor_induk_siswa">Nomor Induk Siswa</string>
    <string name="nama_siswa">Nama Siswa</string>
    <string name="nama_siswa_label">Nama Siswa:</string>
    <string name="nama_surat">Nama Surat</string>
    <string name="keterangan">Keterangan</string>
    <string name="status">Status:</string>
    <string name="nama_hint">Nama : </string>
    <string name="nisn_hint">Password :</string>
    <string name="edit">EDIT</string>
    <string name="logout">LOGOUT</string>
    <string name="update">UPDATE</string>
    <string name="klik_nama_siswa_untuk_melihat_catatan_hafalan_masing_masing">Klik nama siswa untuk melihat catatan hafalan masing-masing.</string>
    <string name="text_klik_mutabaah">Klik nama siswa untuk melihat\nvideo hafalan masing-masing</string>
    <string name="keterangan_waktu_uploadnya">keterangan waktu uploadnya</string>
    <string name="surat">Surat ......</string>
    <string name="login_sebagai">Login Sebagai Guru</string>
    <string name="input_setoran_hafalan_njuz_29">Input Setoran Hafalan\nJuz 29</string>
</resources>