<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logoHafalanKu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:src="@drawable/hafalanku_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/loginPic"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/login_pic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoHafalanKu" />

    <TextView
        android:id="@+id/textAplikasi"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/app_description"
        android:textAlignment="center"
        android:textSize="15sp"
        android:fontFamily="@font/crimson"
        android:textStyle="bold"
        android:textColor="@color/blue"
        android:maxLines="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginPic" />

    <TextView
        android:id="@+id/textPilihLogin"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/pilih_login"
        android:textAlignment="center"
        android:textSize="13sp"
        android:fontFamily="@font/inter"
        android:textStyle="bold"
        android:textColor="@color/blue"
        android:maxLines="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textAplikasi" />

    <Button
        android:id="@+id/buttonLoginGuruWaliKelas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:backgroundTint="@color/grey"
        android:text="@string/login_guru_wali_kelas"
        android:fontFamily="@font/inter"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/blue"
        app:layout_constraintBottom_toTopOf="@+id/buttonLoginOrangtuaSiswa"
        app:layout_constraintTop_toBottomOf="@id/textPilihLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonLoginOrangtuaSiswa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/grey"
        android:text="@string/login_orangtua_siswa"
        android:fontFamily="@font/inter"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonLoginGuruWaliKelas"/>

    <TextView
        android:id="@+id/menuAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/menu_about"
        android:textAlignment="center"
        android:textSize="20sp"
        android:fontFamily="@font/crimson"
        android:textColor="@color/blue"
        android:maxLines="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
