<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logoHafalanKu"
        android:layout_width="180dp"
        android:layout_height="70dp"

        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/hafalanku_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/profile_icon"
        android:clickable="true"
        android:focusable="true"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="15dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:src="@drawable/profile_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_catatan_hafalan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:fontFamily="@font/crimson"
        android:textSize="20sp"
        android:text="@string/catatan_hafalan_juz_29"
        android:textColor="@color/blue"
        android:layout_marginTop="75dp"
        app:layout_constraintTop_toBottomOf="@id/profile_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ScrollView
        android:id="@+id/scrollViewTabel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_catatan_hafalan">

        <TableLayout
            android:id="@+id/table_all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_table_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_catatan_hafalan">

            <TableRow
                android:id="@+id/header_all_row"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/table_header_bg"
                    android:fontFamily="@font/crimson"
                    android:paddingVertical="10dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/no"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/table_header_bg"
                    android:fontFamily="@font/crimson"
                    android:paddingVertical="10dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/nomor_induk_siswa"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/table_header_bg"
                    android:fontFamily="@font/crimson"
                    android:paddingVertical="10dp"
                    android:paddingStart="30dp"
                    android:paddingEnd="30dp"
                    android:text="@string/nama_siswa"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </TableRow>

        </TableLayout>
    </ScrollView>

    <TextView
        android:id="@+id/instruksi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:fontFamily="@font/crimson"
        android:textSize="13sp"
        android:text="@string/klik_nama_siswa_untuk_melihat_catatan_hafalan_masing_masing"
        android:textColor="@color/blue"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@id/scrollViewTabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>