<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <ImageView
        android:id="@+id/logoHafalanKu"
        android:layout_width="180dp"
        android:layout_height="70dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/hafalanku_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/profile_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="15dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:src="@drawable/profile_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/baseLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="30dp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoHafalanKu">

        <LinearLayout
            android:id="@+id/cardLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingVertical="30dp"
            android:paddingHorizontal="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_gravity="center"
            android:baselineAligned="false">

            <LinearLayout
                android:id="@+id/layoutPilihSiswa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/pilih_nama_siswa_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pilih_nama_siswa"
                    android:textColor="@color/blue"
                    android:fontFamily="@font/crimson"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

                <Spinner
                    android:id="@+id/student_name_spinner"
                    android:background="@drawable/bg_spinner_default"
                    android:dropDownVerticalOffset="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="25dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutPilihJuz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="20dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/pilih_juz_text"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pilih_juz"
                    android:textColor="@color/blue"
                    android:fontFamily="@font/crimson"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

                <Spinner
                    android:id="@+id/juz_spinner"
                    android:background="@drawable/bg_spinner_default"
                    android:dropDownVerticalOffset="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="25dp" />
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/layoutPilihSurat"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="30dp"
            android:paddingHorizontal="10dp"
            >

            <TextView
                android:id="@+id/pilih_surat_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pilih_surat"
                android:textColor="@color/blue"
                android:fontFamily="@font/crimson"
                android:textSize="16sp"
                android:gravity="center"
                android:textStyle="bold"/>

            <Spinner
                android:id="@+id/surat_spinner"
                android:background="@drawable/bg_spinner_default"
                android:dropDownVerticalOffset="30dp"
                android:layout_width="match_parent"
                android:layout_height="25dp"/>
        </LinearLayout>

        <Button
            android:id="@+id/selesai_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selesai"
            android:fontFamily="@font/inter"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"

            android:backgroundTint="@color/blue"
            android:layout_gravity="center_horizontal"
            android:layout_margin="16dp" />
        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
