<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logoHafalanKu"
        android:layout_width="180dp"
        android:layout_height="70dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/hafalanku_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/profile_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="15dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:src="@drawable/profile_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_nama_siswa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/crimson"
        android:text="@string/nama_siswa_label"
        android:textColor="@color/blue"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginStart="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_icon" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_nama_siswa"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="97dp">

        <TableLayout
            android:id="@+id/table_individu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:paddingHorizontal="10dp"
            android:background="@drawable/rounded_table_background"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:stretchColumns="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_nama_siswa">

            <TableRow
                android:id="@+id/header_individu_row"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:paddingVertical="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/table_header_bg"
                    android:fontFamily="@font/crimson"
                    android:paddingVertical="10dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/nama_surat"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/table_header_bg"
                    android:fontFamily="@font/crimson"
                    android:paddingVertical="10dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/keterangan"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </TableRow>

        </TableLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>